# interview-with-giri

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  Problem.txt  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  Procfile  fly.toml  noxfile.py  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_behavior_event_table.py  b2c3d4e5f6g7_add_extended_data_to_candidate_report.py  be44d92bb223_initial_schema.py  c3d4e5f6g7h8_add_missing_indexes.py  d4e5f6g7h8i9_add_agentmail_to_organization.py  e5f6g7h8i9j0_add_share_token_to_report.py  f6g7h8i9j0k1_add_resume_to_session.py  g7h8i9j0k1l2_add_interview_template.py  h8i9j0k1l2m3_add_scoring_rubric.py  i9j0k1l2m3n4_add_shortlisted.py  j0k1l2m3n4o5_add_report_comments.py  k1l2m3n4o5p6_add_scheduled_at.py  l2m3n4o5p6q7_add_candidate_feedback.py  m3n4o5p6q7r8_add_difficulty_progression.py  n10_add_copilot_session.py  n11_add_competency_genome.py  n12_add_decision_tree.py  n13_add_engagement_metrics.py  n14_add_interview_clips.py  n15_add_training_simulation.py  n16_add_company_values.py  n17_add_hiring_outcomes.py  n18_add_knowledge_base.py  n19_add_accessibility_config.py  n4o5p6q7r8s9_add_walkthrough_progress.py
backend/src/interviewbot/: __init__.py  config.py  dependencies.py  main.py
backend/src/interviewbot/middleware/: tenant.py
backend/src/interviewbot/models/: database.py  schemas.py  tables.py
backend/src/interviewbot/routers/: accessibility.py  ai_ask.py  analytics.py  ats.py  auth.py  billing.py  clips.py  coach.py  code_execution.py  comments.py  copilot.py  dashboard.py  decision_trees.py  feedback.py  genome.py  health.py  interviews.py  job_postings.py  knowledge.py  organizations.py  practice.py  predictions.py  proctoring.py  reports.py  templates.py  training.py  uploads.py  users.py  values.py  webhooks.py
backend/src/interviewbot/services/: accessibility_service.py  agentmail_client.py  ai_engine.py  ats_integration.py  audio_analysis.py  behavior_analytics.py  calendar_service.py  clip_engine.py  coaching_engine.py  code_analysis.py  code_executor.py  copilot_engine.py  engagement_analyzer.py  genome_engine.py  highlight_engine.py  job_scraper.py  knowledge_engine.py  livekit_service.py  notifications.py  prediction_engine.py  scoring_engine.py  training_engine.py  tree_engine.py  values_engine.py  voice_pipeline.py
backend/src/interviewbot/utils/: logger.py
backend/src/interviewbot/websocket/: chat_handler.py  voice_handler.py
backend/tests/: conftest.py  test_access_control.py  test_accessibility.py  test_adaptive_difficulty.py  test_agentmail.py  test_ai_engine.py  test_ask_ai.py  test_ats.py  test_audio_analysis.py  test_auth.py  test_billing_checkout.py  test_branding.py  test_candidate_feedback.py  test_clips.py  test_coach.py  test_code_execution.py  test_code_executor_unit.py  test_comments.py  test_comparison.py  test_copilot.py  test_dashboard.py  test_debrief.py  test_decision_trees.py  test_e2e_flow.py  test_engagement.py  test_extract_skills.py  test_genome.py  test_health.py  test_highlights.py  test_interviews.py  test_job_import.py  test_job_postings.py  test_knowledge.py  test_practice_mode.py  test_predictions.py  test_proctoring.py  test_rate_limiting.py  test_rbac.py  test_report_rbac.py  test_reports_export.py  (+16 more)
db/: init.sql  seed.sql
docker/: docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: DEPLOYMENT.md  MULTI_AGENT_PLAN.md  MULTI_AGENT_PLAN_V2.md  PRODUCT_FEATURES.md  TESTING.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts  vercel.json
scripts/: post_deploy_check.py
(+121 files in other folders)
