[project]
name = "interviewbot"
version = "0.1.0"
description = "AI Interview Bot - Interview as a Service SaaS platform"
authors = [
    { name = "Girish", email = "girish@buildwithaigiri.com" },
]
license = "MIT"
readme = "../README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "redis>=5.0",
    "openai>=1.50",
    "anthropic>=0.37",
    "stripe>=10.0",
    "boto3>=1.35",
    "websockets>=13.0",
    "livekit-api>=0.7",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.0",
    "google-genai>=1.67.0",
    "openpyxl>=3.1",
    "agentmail>=0.1",
    "PyPDF2>=3.0",
]

[dependency-groups]
nox = ["nox-uv"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-randomly>=3.15",
    "pytest-timeout>=2.3",
    "httpx",
]
type_check = [
    "mypy>=1.13",
    "types-redis>=4.6",
]
lint = ["ruff>=0.8"]
dev = [
    { include-group = "test" },
    { include-group = "type_check" },
    { include-group = "lint" },
    "pip-audit>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interviewbot"]

[tool.uv]
default-groups = "all"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
ignore_missing_imports = true
enable_error_code = ["deprecated", "exhaustive-match"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # ruff
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
]
extend-ignore = ["B008", "RUF005", "RUF012"]  # B008: FastAPI Depends() in defaults is standard
unfixable = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=interviewbot",
    "--cov-report=term-missing",
    "--verbose",
    "--timeout=90",
    "-p no:randomly",
]
markers = [
    "smoke: fast, critical-path tests that should always pass",
    "integration: tests that call external services (AI, Stripe, SMTP)",
    "slow: tests that take >30s due to setup or network",
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib",
    "ignore::DeprecationWarning:jose",
    "ignore::DeprecationWarning:httpx",
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
